--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.6.0",
+    "next": "13.5.6",
+    "next-i18next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-i18next": "^13.3.1"
   }
 }
