--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "i18next": "^23.6.0",
     "next": "13.5.6",
     "next-i18next": "^14.0.3",
