--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "i18next": "^23.6.0",
     "next": "13.5.6",
     "next-i18next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^13.3.1"
+    "react-i18next": "^13.3.1",
+    "react-redux": "^8.1.3",
+    "sass": "^1.69.5",
+    "swiper": "^11.0.3"
   }
 }
